# pkg/api/flamenco-openapi.yaml
@@ -2426,7 +2426,7 @@ components:
           type: string
           description: UUID of the Task
         "job_id": { type: string }
-        "worker": { $ref: "#/components/schemas/AssignedWorker" }
+        "worker": { $ref: "#/components/schemas/TaskWorker" }
         "name": { type: string, description: "Name of the task" }
         "updated":
           type: string
@@ -2438,13 +2438,6 @@ components:
         "steps_completed": { type: integer }
         "steps_total": { type: integer }
       required: [id, job_id, name, updated, status, activity, steps_completed, steps_total]
-
-    AssignedWorker:
-      type: object
-      properties:
-        "name": { type: string }
-        "uuid": { type: string }
-      required: [name, uuid]
 
     EventTaskLogUpdate:
       type: object
